--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quia illo voluptatum laboriosam, alias aliquam a illum quis animi eveniet aspernatur blanditiis atque nulla beatae iste aut dignissimos ea ullam.</h2>
     <h3>This is h3</h3>
+    <h1>Heading</h1>
+    <ul>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Grapes</li>
+    </ul>
 </body>
 </html>
